parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__test-lexer-49.snap
---
source: parser/src/lexer/lexer.rs
description: ^
---
[
    Token {
        kind: BitXor,
        value: None,
        start: 0,
        end: 1,
    },
]
