parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__test-lexer-51.snap
---
source: parser/src/lexer/lexer.rs
description: ":="
---
[
    Token {
        kind: Walrus,
        value: None,
        start: 0,
        end: 2,
    },
]
